--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -4,9 +4,9 @@
 
 <div class="download-content">
     <div id="recommendation-section" hidden>
-        <h1>{%if tx.download.recommendation != ""%}{{ tx.download.recommendation }}{%else%}{{ txEn.download.recommendation }}{%endif%}:</h1>
+        <h1>{%if tx.download.recommendation != ""%}{{ tx.download.recommendation }}{%else%}{{ txEn.download.recommendation }}{%endif%}</h1>
         <div id="recommend"></div>
-        <h1>{%if tx.download.other != ""%}{{ tx.download.other }}{%else%}{{ txEn.download.other }}{%endif%}:</h1>
+        <h1>{%if tx.download.other != ""%}{{ tx.download.other }}{%else%}{{ txEn.download.other }}{%endif%}</h1>
     </div>
     <div id="boxes">
         <div class="box" id="android">
