--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -59,7 +59,9 @@
         <div class="box" id="windows">
             <div class="title">Windows</div>
             <div class="buttons">
-                <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat%20Setup%20{{VERSION_DESKTOP}}.exe"><small>Get .exe with</small>Setup</a>
+                <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat%20Setup%20{{VERSION_DESKTOP}}.exe" class="img-badge">
+                    <img src="../assets/badges/get-it-on-windows.png" alt="Get it on Windows" />
+                </a>
             </div>
             <div class="descr">
                 <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
