right-align title

--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -22,7 +22,9 @@ div.download-content {
         font-size: 20px;
         margin-top: 5pt;
         margin-bottom: 8px;
+        margin-right: .5em;
         color: #222;
+        float: right;
     }
 
     div.box div.buttons {
