--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -1,15 +1,9 @@
 
 
 div.download-content {
-    display: block;
-    padding: 0 4pt;
-
-    // #recommend>.box {
-
-    // }
 
     div.box {
-        margin: 10pt 0pt;
+        margin: 1em 0pt;
         padding: 2px 2px 7pt 7pt;
         background-color: #eee;
         font-size: 12px;
