--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -8,6 +8,7 @@ div.download-content {
         margin: 1em 0pt;
         padding: 2px 2px 7pt 7pt;
         background-color: #eee;
+        background-image: linear-gradient(120deg, #eee, #fafafa);
         font-size: 12px;
     }
 
@@ -61,8 +62,12 @@ div.download-content {
         color: #222;
     }
 
+    code {
+        background: transparent;
+    }
+
     /* desktop second */
-    
+
     @media only screen and (min-width: 640px) {
         div.box div.title {
             float: right;
