tweak flathub badge

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -45,7 +45,7 @@
             <div class="title">Linux</div>
             <div class="buttons">
                 <a href="https://flathub.org/apps/details/chat.delta.desktop" class="img-badge">
-                    <img src="../assets/badges/flathub.svg" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
+                    <img src="../assets/badges/flathub.png" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
                 </a>
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/deltachat-desktop_{{VERSION_DESKTOP}}_amd64.deb"><small>Get .deb for</small> Debian/Ubuntu</a>
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat-{{VERSION_DESKTOP}}.AppImage"><small>Get Universal</small> AppImage</a>
