--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -41,7 +41,8 @@ div.download-content {
         margin: 3px;
         text-decoration: none;
         font-size: 16px;
-        height: max-content;
+        height: 48px;
+        box-sizing: border-box;
         border: 2px solid #444;
         border-radius: 5px;
         line-height: 1.23;
