--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="box" id="linux">
-            <div class="title">Linux</div>
+            <div class="title">GNU/Linux</div>
             <div class="buttons">
                 <a href="https://flathub.org/apps/details/chat.delta.desktop" class="img-badge">
                     <img src="../assets/badges/flathub.png" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
