--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -41,22 +41,6 @@
                 <a href="https://testflight.apple.com/join/uEMc1NxS">{%if tx.download.beta_on != ""%}{{ tx.download.beta_on }}{%else%}{{ txEn.download.beta_on }}{%endif%} Testflight</a>
             </div>
         </div>
-        <div class="box" id="linux">
-            <div class="title">GNU/Linux</div>
-            <div class="buttons">
-                <a href="https://flathub.org/apps/details/chat.delta.desktop" class="img-badge">
-                    <img src="../assets/badges/flathub.png" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
-                </a>
-                <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/deltachat-desktop_{{VERSION_DESKTOP}}_amd64.deb"><small>Get .deb for</small> Debian/Ubuntu</a>
-                <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat-{{VERSION_DESKTOP}}.AppImage"><small>Get Universal</small> AppImage</a>
-            </div>
-            <div class="descr">
-                <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-                &ndash;
-                <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/">Arch (AUR)</a>:
-                <code>yay -S deltachat-desktop-git</code>
-            </div>
-        </div>
         <div class="box" id="macos">
             <div class="title">macOS</div>
             <div class="buttons">
@@ -79,6 +63,23 @@
                 <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
                 &ndash;
                 <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat%20{{VERSION_DESKTOP}}.exe">Get portable version (experimental)</a>
+            </div>
+        </div>
+        <div class="box" id="linux">
+            <div class="title">GNU/Linux</div>
+            <div class="buttons">
+                <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/"><small>Get AUR for</small> Arch</a>
+                <a href="https://flathub.org/apps/details/chat.delta.desktop" class="img-badge">
+                    <img src="../assets/badges/flathub.png" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
+                </a>
+                <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/deltachat-desktop_{{VERSION_DESKTOP}}_amd64.deb"><small>Get .deb for</small> Debian/Ubuntu</a>
+                <a href="https://download.delta.chat/desktop/{{VERSION_DESKTOP}}/DeltaChat-{{VERSION_DESKTOP}}.AppImage"><small>Get Universal</small> AppImage</a>
+            </div>
+            <div class="descr">
+                <a href="https://github.com/deltachat/deltachat-desktop">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+                <br />
+                Arch manual install: <code>yay -S deltachat-desktop-git</code><br />
+                Flatpak manual install: <code>flatpak install flathub chat.delta.desktop</code>
             </div>
         </div>
     </div>
