--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -68,7 +68,7 @@
         <div class="box" id="linux">
             <div class="title">GNU/Linux</div>
             <div class="buttons">
-                <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/"><small>Get AUR for</small> Arch</a>
+                <a href="https://aur.archlinux.org/packages/deltachat-desktop-git/"><small>Build from</small>AUR</a>
                 <a href="https://flathub.org/apps/details/chat.delta.desktop" class="img-badge">
                     <img src="../assets/badges/flathub.png" alt="{%if tx.download.flathub != ""%}{{ tx.download.flathub }}{%else%}{{ txEn.download.flathub }}{%endif%}" />
                 </a>
