use iPhone/iPad instead iOS

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="box" id="ios">
-            <div class="title">iOS</div>
+            <div class="title">iPhone/iPad</div>
             <div class="buttons">
                 <a class="img-badge" href="https://apps.apple.com/us/app/delta-chat/id1459523234">
                     <img src="../assets/badges/get-it-on-ios.png" alt="{%if tx.download.dl_appstore != ""%}{{ tx.download.dl_appstore }}{%else%}{{ txEn.download.dl_appstore }}{%endif%}" />
