add badge+link to amazon appstore (the only way to get Delta Chat on Kindles without rooting)

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -19,6 +19,9 @@
                 <a href="https://f-droid.org/app/com.b44t.messenger" class="img-badge">
                     <img src="../assets/badges/get-it-on-fdroid.png" alt="{%if tx.download.dl_fdroid != ""%}{{ tx.download.dl_fdroid }}{%else%}{{ txEn.download.dl_fdroid }}{%endif%}" />
                 </a>
+                <a href="https://www.amazon.com/dp/B0864PKVW3/" class="img-badge">
+                    <img src="../assets/badges/amazon-appstore.png" alt="Available at Amazon Appstore" />
+                </a>
             </div>
             <div class="descr">
                 <a href="https://github.com/deltachat/deltachat-android">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
