add new font: Inter

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -149,7 +149,7 @@ p.blogdate {
 /*colors*/
 
 body {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 15px;
     line-height: 1.7em;
     color: #000;
