--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -1,23 +1,31 @@
 {% assign index = 0 %}
 {% for post in site.posts %}
 {% assign index = index | plus:1 %}
+<div class="post-box col-desk-10 col-desk-shift-1 col-mob-4">
 {% if post.image and index <= 10 %}
-<div class="post-box">
-  <a href="{{ site.baseurl }}{{ post.url }}">
-    <div class="featured-image">
+  <div class="featured-image col-desk-4 col-desk-shift-1 col-mob-4">
+    <a href="{{ site.baseurl }}{{ post.url }}">
       <img src="{{ post.image }}" />
+    </a>
+  </div>
+  <div class="col-desk-7">
+    <h2>{{ post.title }}</h2>
+    <div>
+      <em>{{ post.date | date: "%B %d, %Y" }}</em> -
+      {{ post.excerpt | strip_html }} 
+      <a href="{{ site.baseurl }}{{ post.url }}">Read on...</a>
     </div>
+  </div>
 {% else %}
-<div>
-  <a href="{{ site.baseurl }}{{ post.url }}">
+  <div class="simple-post col-desk-12 col-mob-4">
+    <h2>{{ post.title }}</h2>
+    <div>
+      <em>{{ post.date | date: "%B %d, %Y" }}</em> -
+      {{ post.excerpt | strip_html }} 
+      <a href="{{ site.baseurl }}{{ post.url }}">Read on...</a>
+    </div>
+  </div>
 {% endif %}
-  <h2>{{ post.title }}</h2>
-  </a>
-  <p>
-    <em>{{ post.date | date: "%B %d, %Y" }}</em> -
-    {{ post.excerpt | strip_html }} 
-    <a href="{{ site.baseurl }}{{ post.url }}">Read on...</a>
-  </p>
 </div>
 {% endfor %}
 
