--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,4 +1,12 @@
 @import "_normalize";
 @import "_fonts";
+@import "_grid";
+@import "_typo";
 @import "_base";
-@import "_downloadpage";
+
+@import "_menu";
+@import "_footer";
+@import "_content";
+@import "_blog";
+
+// @import "_downloadpage";
