--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,68 +15,85 @@
 <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="{%if tx.rss_news_title != ""%}{{ tx.rss_news_title }}{%else%}{{ txEn.rss_news_title }}{%endif%}" />
 </head>
 
-<body id="top">
+<body>
+  <div class="grid">
+    <div id="menu" class="col-desk-12 col-tab-12 col-mob-4">
+      <div class="logo col-desk-6 col-tab-6 col-mob-4">
+        <img src="../assets/logos/delta-chat.svg" width="40" />
+        <div class="text"><strong>delta</strong>.chat</div>
+      </div>
+      <ul class="nav col-desk-6 col-tab-6 col-mob-4">
+        <li class="col-desk-1 col-tab-1 col-mob-4">
+          <a href="../{{page.lang}}/">{%if tx.menu.home != ""%}{{ tx.menu.home }}{%else%}{{ txEn.menu.home }}{%endif%}</a>
+        </li>
+        <li class="col-desk-1 col-tab-1 col-mob-4">
+          <a href="download">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a>
+        </li>
+        <li class="col-desk-1 col-tab-1 col-mob-4">
+          <a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
+        <li class="col-desk-1 col-tab-1 col-mob-4">
+          <a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a>
+        </li>
+        <li class="col-desk-1 col-tab-1 col-mob-4">
+          <a href="help">{%if tx.menu.help != ""%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a>
+        </li>
+        <li class="col-desk-1 col-tab-1 col-mob-4">
+          <a href="https://support.delta.chat">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a>
+        </li>
+      </ul>
+    </div>
 
-<div id="menu">
-<ul>
-<li><a href="../{{page.lang}}/">{%if tx.menu.home != ""%}{{ tx.menu.home }}{%else%}{{ txEn.menu.home }}{%endif%}</a></li>
-<li><a href="download">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a></li>
-<li><a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
-<li><a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a></li>
-<li><a href="help">{%if tx.menu.help != ""%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a></li>
-<li><a href="https://support.delta.chat">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a></li>
-</ul>
-</div>
+    <div id="content" class="col-desk-12 col-tab-12 col-mob-4">
+      {% if page.is_post == true %}
+      <div class="blog col-desk-8 col-desk-shift-2">
+        <h1>{{ page.title }}</h1>
+        <p class="blogdate">{{ page.date | date: "%B %d, %Y" }} {% if page.author %}by {{ page.author }}{% endif %}</p>
+      {% endif %}
 
-<div id="content">
+      {% if page.header != blank %}
+      <h1>{{page.header}}</h1>
+      {% endif %}
 
+      {% if page.downloads == true %}
+      {% include download-boxes.html %}
+      {% endif %}
 
-{% if page.is_post == true %}
-<h1>{{ page.title }}</h1>
-<p class="blogdate">{{ page.date | date: "%B %d, %Y" }} {% if page.author %}by {{ page.author }}{% endif %}</p>
-{% endif %}
+      {% if page.render_toc == true %}
+      {% include toc.html html=content %}
+      {% endif %}
 
-{% if page.header != blank %}
-    <h1>{{page.header}}</h1>
-{% endif %}
-
-{% if page.downloads == true %}
-    {% include download-boxes.html %}
-{% endif %}
-
-{% if page.render_toc == true %}
-    {% include toc.html html=content %}
-{% endif %}
-
-{% include anchor_headings.html html=content anchorClass="anchor" %}
+      {% include anchor_headings.html html=content anchorClass="anchor" %}
 
 
-{% if page.is_post == true %}
-<p class="menulike">
-{% if page.previous.url %}<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> |{% endif %}
-<a href="blog">Index</a>
-{% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
-</p>
-<p class="menulike">{%if tx.subscribe_to_feed != ""%}{{ tx.subscribe_to_feed }}{%else%}{{ txEn.subscribe_to_feed }}{%endif%}: {% include subscribe-to-feed-links.html %}</p>
-{% endif %}
+      {% if page.is_post == true %}
+      <p class="menulike">
+        {% if page.previous.url %}<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> |{% endif %}
+        <a href="blog">Index</a>
+        {% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
+      </p>
+      <p class="menulike">{%if tx.subscribe_to_feed != ""%}{{ tx.subscribe_to_feed }}{%else%}{{ txEn.subscribe_to_feed }}{%endif%}: {% include subscribe-to-feed-links.html %}</p>
+      </div>
+      {% endif %}
 
 
-</div>
+    </div>
 
-<div id="footer">
-<p>
-    <a href="references">{%if tx.references != ""%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
-    | <a href="https://github.com/deltachat/">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-    | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
-    | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
-<br>
-<span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
-{% include footer-languages.html %}
-<br>
-© 2020 Delta Chat contributors
-</p>
-</div>
-
+    <div id="footer" class="col-desk-12 col-tab-12 col-mob-4">
+      <div>
+        <a href="references">{%if tx.references != ""%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
+        | <a href="https://github.com/deltachat/">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+        | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
+        | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
+      </div>
+      <div>
+        <span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
+        {% include footer-languages.html %}
+      </div>
+      <div>
+        &copy; 2020 Delta Chat contributors
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
