okish mobile views

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,12 +1,12 @@
 <div class="landing-af col-desk-12">
-  <div class="landing-cta col-desk-6">
+  <div class="landing-cta col-desk-6 col-tab-12">
     <h1>
       <strong>delta</strong>.chat
     </h1>
     <h2>messaging with everyone</h2>
   </div>
 
-  <div class="landing-images col-desk-6">
+  <div class="landing-images col-desk-6 col-tab-12">
     <div class="desktop">
       <img src="../assets/blog/desktop-screenshot.png" /> 
     </div>
