--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -22,30 +22,35 @@
     display: flex;
     max-height: 100%;
     margin-top: -150px;
+    position: relative;
     
     .desktop {
       flex: 1;
+      max-width: 100%;
+      overflow: hidden;
 
       img {
-        max-width: 100%;
+        height: 500px;
       }
     }
 
     .overlay {
+      bottom: -200px;
+      left: 50px;
       position: absolute;
-      width: 600px;
+      max-width: 100%;
       display: flex;
       overflow: hidden;
-      margin-top: 300px;
       
       .android {
-        padding-left: 50px;
+
         img {
           border: 1px solid transparent;
           border-radius: 5px;
           height: 400px;
         }
       }
+      
       .ios {
         padding-left: 50px;
         img {
@@ -55,3 +60,27 @@
     }
   }
 } 
+
+@media screen and (max-width: $grid-tablet-breakpoint) {
+  .landing-af {
+    flex-direction: column;
+    height: auto;
+    
+    .landing-images {
+      margin-top: 0;
+
+      .desktop {
+        img {
+          height: auto;
+          max-width: 100%;
+        }
+      }
+      .overlay {
+        display: none;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $grid-mobile-breakpoint) {
+}
