--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -1,36 +1,31 @@
 
 
-div.download-content {
+.download-content {
+  .recommendation-section .recommendation-bg {
+    border: 1px solid red;
+  }
 
-    div.recommendation-section div.recommendation-bg {
-        border: 1px solid red;
+  .box {
+    margin: 1em 0pt;
+    padding: 2px 2px 7pt 7pt;
+    font-size: 12px;
+    
+    .title {
+      font-size: 20px;
+      margin-top: 5pt;
+      margin-bottom: 8px;
+      margin-right: .5em;
     }
 
-    div.box {
-        margin: 1em 0pt;
-        padding: 2px 2px 7pt 7pt;
-        background-color: #eee;
-        background-image: linear-gradient(120deg, #f3f3f3, #eee);
-        font-size: 12px;
-    }
+    .buttons {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      align-items: center;
+      margin: 1em 0;
 
-    div.box div.title {
-        font-size: 20px;
-        margin-top: 5pt;
-        margin-bottom: 8px;
-        margin-right: .5em;
-        color: #222;
-    }
 
-    div.box div.buttons {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        margin: 1em 0;
-    }
-
-    div.box div.buttons a:not(.img-badge) {
+      a:not(.img-badge) {
         background: #111;
         color: white;
         font-weight: bold;
@@ -44,28 +39,37 @@ div.download-content {
         border-radius: 5px;
         line-height: 1.23;
         min-width: 160px;
-    }
+      }
 
-    div.box div.buttons a.img-badge {
+      a.img-badge {
         display: flex;
         align-content: center;
         margin: 3px;
         &>img{
-            height: 48px;
+          height: 48px;
         }
-    }
+      }
 
-    div.box div.buttons small {
+      small {
         display: block;
         font-size: 12px;
         font-weight:normal;
+      }
     }
-
-    div.box div.descr {
-        color: #222;
+    .descr {
     }
-
-    code {
-        background: transparent;
+  }
+  
+  code {
+    background: transparent;
+  }
+}
+@media screen and (max-width: $grid-mobile-breakpoint) {
+  .download-content {
+    .box {
+      .buttons {
+        flex-direction: column;
+      }
     }
+  }
 }
