--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,23 +1,23 @@
-<div class="landing-af col-desk-12">
-  <div class="landing-cta col-desk-6 col-tab-12">
-    <h1>
-      <strong>delta</strong>.chat
-    </h1>
-    <h2>messaging with everyone</h2>
-  </div>
+<div class="grid">
+  <div class="col-desk-12 col-mob-4">
+    <div class="landing-af">
+      <div class="landing-cta col-desk-6 col-tab-12">
+        <h1>
+          <strong>delta</strong>.chat
+        </h1>
+        <h2>messaging with everyone</h2>
+        <a class="call-to-action" href="download">Get Started</a>
+      </div>
 
-  <div class="landing-images col-desk-6 col-tab-12">
-    <div class="desktop">
-      <img src="../assets/blog/desktop-screenshot.png" /> 
-    </div>
-    <div class="overlay">
-      <div class="android">
-        <img src="../assets/blog/screenshots/2019-12-17-delta-chat-google-play-release-chat-list-light.png" />
+      <div class="landing-images">
+        <div class="android">
+          <img src="../assets/home/android-chat-list.png" />
+        </div>
+        <div class="ios">
+          <img src="../assets/blog/screenshots/2020-01-09-delta-chat-iOS-weekend-group-chat.png" />
+        </div>
       </div>
-      <div class="ios">
-        <img src="../assets/blog/screenshots/2020-01-09-delta-chat-iOS-weekend-group-chat.png" />
-      </div>
-    </div>
+    </div> 
   </div>
 </div>
 
