--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,103 +1,115 @@
 <!DOCTYPE html>
 <html lang="{{page.lang}}">
-{% assign tx = site.data.lang[page.lang][page.lang] %}
-{% assign txEn = site.data.lang['en']['en'] %}
+  {% assign tx = site.data.lang[page.lang][page.lang] %}
+  {% assign txEn = site.data.lang['en']['en'] %}
 
 
-<head>
-<title>{{ page.title }} - Delta Chat</title>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-<meta name="description" content="{%if tx.meta.description != ""%}{{ tx.meta.description }}{%else%}{{ txEn.meta.description }}{%endif%}" />
-<meta name="keywords" content="{%if tx.meta.keywords != ""%}{{ tx.meta.keywords }}{%else%}{{ txEn.meta.keywords }}{%endif%}" />
+  <head>
+    <title>{{ page.title }} - Delta Chat</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+    <meta name="description" content="{%if tx.meta.description != ""%}{{ tx.meta.description }}{%else%}{{ txEn.meta.description }}{%endif%}" />
+    <meta name="keywords" content="{%if tx.meta.keywords != ""%}{{ tx.meta.keywords }}{%else%}{{ txEn.meta.keywords }}{%endif%}" />
 
-<link rel="stylesheet" href="../assets/css/styles.css" type="text/css" />
-<link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="{%if tx.rss_news_title != ""%}{{ tx.rss_news_title }}{%else%}{{ txEn.rss_news_title }}{%endif%}" />
-</head>
+    <link rel="stylesheet" href="../assets/css/styles.css" type="text/css" />
+    <link rel="alternate" href="https://delta.chat/feed.xml" type="application/atom+xml" title="{%if tx.rss_news_title != ""%}{{ tx.rss_news_title }}{%else%}{{ txEn.rss_news_title }}{%endif%}" />
+  </head>
 
-<body>
-  <div class="grid">
-    <div id="menu" class="col-desk-12 col-tab-12 col-mob-4">
-      <div class="logo col-desk-6 col-tab-6 col-mob-4">
-        <img src="../assets/logos/delta-chat.svg" width="40" />
-        <div class="text"><strong>delta</strong>.chat</div>
-      </div>
-      <ul class="nav col-desk-6 col-tab-6 col-mob-4">
-        <li class="col-desk-1 col-tab-1 col-mob-4">
-          <a href="../{{page.lang}}/">{%if tx.menu.home != ""%}{{ tx.menu.home }}{%else%}{{ txEn.menu.home }}{%endif%}</a>
-        </li>
-        <li class="col-desk-1 col-tab-1 col-mob-4">
-          <a href="download">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a>
-        </li>
-        <li class="col-desk-1 col-tab-1 col-mob-4">
-          <a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
-        <li class="col-desk-1 col-tab-1 col-mob-4">
-          <a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a>
-        </li>
-        <li class="col-desk-1 col-tab-1 col-mob-4">
-          <a href="help">{%if tx.menu.help != ""%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a>
-        </li>
-        <li class="col-desk-1 col-tab-1 col-mob-4">
-          <a href="https://support.delta.chat">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a>
-        </li>
-      </ul>
-    </div>
-
-    <div id="content" class="col-desk-12 col-tab-12 col-mob-4">
-      {% if page.is_post == true %}
-      <div class="blog col-desk-8 col-desk-shift-2">
-        <h1>{{ page.title }}</h1>
-        <p class="blogdate">{{ page.date | date: "%B %d, %Y" }} {% if page.author %}by {{ page.author }}{% endif %}</p>
-      {% endif %}
-
-      {% if page.header != blank %}
-      <h1>{{page.header}}</h1>
-      {% endif %}
-
-      {% if page.downloads == true %}
-      <div class="download-content col-desk-8 col-desk-shift-2 col-mob-shift-0 col-mob-4">
-        {% include download-boxes.html %}
-      {% endif %}
-
-      {% if page.render_toc == true %}
-      {% include toc.html html=content %}
-      {% endif %}
-
-      {% include anchor_headings.html html=content anchorClass="anchor" %}
-
-      {% if page.downloads == true %}
+  <body>
+    <div class="body">
+      <div id="menu">
+        <div class="grid">
+          <div id="menu-inner" class="col-desk-12 col-tab-12 col-mob-4">
+            <div class="logo col-desk-6 col-tab-6 col-mob-4">
+              <a href="../{{page.lang}}/">
+                <img src="../assets/logos/delta-transparent.svg" width="40" />
+                <div class="text"><strong>delta</strong>.chat</div>
+              </a>
+            </div>
+            <ul class="nav col-desk-6 col-tab-6 col-mob-4">
+              <li class="col-desk-1 col-tab-1 col-mob-4">
+                <a href="blog">{%if tx.menu.blog != ""%}{{ tx.menu.blog }}{%else%}{{ txEn.menu.blog }}{%endif%}</a></li>
+              <li class="col-desk-1 col-tab-1 col-mob-4">
+                <a href="contribute">{%if tx.menu.contribute != ""%}{{ tx.menu.contribute }}{%else%}{{ txEn.menu.contribute }}{%endif%}</a>
+              </li>
+              <li class="col-desk-1 col-tab-1 col-mob-4">
+                <a href="help">{%if tx.menu.help != ""%}{{ tx.menu.help }}{%else%}{{ txEn.menu.help }}{%endif%}</a>
+              </li>
+              <li class="col-desk-1 col-tab-1 col-mob-4">
+                <a href="https://support.delta.chat">{%if tx.menu.forum != ""%}{{ tx.menu.forum }}{%else%}{{ txEn.menu.forum }}{%endif%}</a>
+              </li>
+              <li class="call-to-action col-desk-1 col-tab-1 col-mob-4">
+                <a href="download">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+      {% if page.index == true %}
+        {% include index.html %}
       {% endif %}
 
-      {% if page.is_post == true %}
-      <p class="menulike">
-        {% if page.previous.url %}<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> |{% endif %}
-        <a href="blog">Index</a>
-        {% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
-      </p>
-      <p class="menulike">{%if tx.subscribe_to_feed != ""%}{{ tx.subscribe_to_feed }}{%else%}{{ txEn.subscribe_to_feed }}{%endif%}: {% include subscribe-to-feed-links.html %}</p>
+      <div id="content">
+        <div class="grid">
+          <div class="col-desk-12 col-tab-12 col-mob-4">
+            {% if page.is_post == true %}
+            <div class="blog col-desk-8 col-desk-shift-2">
+              <h1>{{ page.title }}</h1>
+              <p class="blogdate">{{ page.date | date: "%B %d, %Y" }} {% if page.author %}by {{ page.author }}{% endif %}</p>
+              {% endif %}
+
+              {% if page.header != blank %}
+              <h1>{{page.header}}</h1>
+              {% endif %}
+
+              {% if page.downloads == true %}
+              <div class="download-content col-desk-8 col-desk-shift-2 col-mob-shift-0 col-mob-4">
+                {% include download-boxes.html %}
+                {% endif %}
+
+                {% if page.render_toc == true %}
+                {% include toc.html html=content %}
+                {% endif %}
+
+                {% include anchor_headings.html html=content anchorClass="anchor" %}
+
+                {% if page.downloads == true %}
+                </div>
+                {% endif %}
+
+              {% if page.is_post == true %}
+              <p class="menulike">
+                {% if page.previous.url %}<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a> |{% endif %}
+                <a href="blog">Index</a>
+                {% if page.next.url %}| <a href="{{page.next.url}}">{{page.next.title}} &raquo;</a>{% endif %}
+              </p>
+              <p class="menulike">{%if tx.subscribe_to_feed != ""%}{{ tx.subscribe_to_feed }}{%else%}{{ txEn.subscribe_to_feed }}{%endif%}: {% include subscribe-to-feed-links.html %}</p>
+            </div>
+            {% endif %}
+
+          </div>
+        </div>
       </div>
-      {% endif %}
-
-
+      
+      <div id="footer">
+        <div class="grid">
+          <div id="footer-inner" class="col-desk-12 col-tab-12 col-mob-4">
+            <div>
+              <a href="references">{%if tx.references != ""%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
+              | <a href="https://github.com/deltachat/">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
+              | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
+              | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
+            </div>
+            <div>
+              <span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
+              {% include footer-languages.html %}
+            </div>
+            <div>
+              &copy; 2020 Delta Chat contributors
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-    <div id="footer" class="col-desk-12 col-tab-12 col-mob-4">
-      <div>
-        <a href="references">{%if tx.references != ""%}{{ tx.references }}{%else%}{{ txEn.references }}{%endif%}</a>
-        | <a href="https://github.com/deltachat/">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
-        | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
-        | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
-      </div>
-      <div>
-        <span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
-        {% include footer-languages.html %}
-      </div>
-      <div>
-        &copy; 2020 Delta Chat contributors
-      </div>
-    </div>
-  </div>
-</body>
-
+  </body>
 </html>
