improve landing page

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <div class="col-desk-12 col-mob-4">
     <div class="landing-af">
-      <div class="landing-cta col-desk-6 col-tab-12">
+      <div class="landing-cta col-desk-6 col-tab-12 col-mob-4">
         <h1>
           <strong>delta</strong>.chat
         </h1>
