--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -46,7 +46,7 @@
 
 
 @media screen and (max-width: $grid-mobile-breakpoint) {
-  #menu {
+  #menu-inner {
     flex-direction: column;
     height: auto;
 
