--- a/_sass/_landing.scss
+++ b/_sass/_landing.scss
@@ -23,7 +23,10 @@
       border-radius: 10px;
       padding: 15px 25px;
       text-decoration: none;
-      
+
+      &:hover {
+        color: #FFF;
+      }
     }
   }
 
