add hover for menu

--- a/_sass/_menu.scss
+++ b/_sass/_menu.scss
@@ -7,11 +7,13 @@
 
   a {
     text-decoration: none;
+  }
+
+  .logo a {
     &:hover {
       color: #FFF;
     }
   }
-
   .logo, .logo a {
     display: flex;
     flex-direction: horizontal;
