center some blog images

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -65,8 +65,13 @@
   }
 }
 
+.blog-images {
+  text-align: center;
+}
+
 @media screen and (max-width: $grid-mobile-breakpoint) {
   .post-box {
     flex-direction: column;
   }
 }
+
