--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
   <head>
     <title>{{ page.title }} - Delta Chat</title>
     <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+    <link rel="manifest" href="../site.webmanifest">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <meta name="description" content="{%if tx.meta.description != ""%}{{ tx.meta.description }}{%else%}{{ txEn.meta.description }}{%endif%}" />
     <meta name="keywords" content="{%if tx.meta.keywords != ""%}{{ tx.meta.keywords }}{%else%}{{ txEn.meta.keywords }}{%endif%}" />
