--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,15 +7,8 @@ body {
   background-color: $background-color;
   color: $text-color;
   font-weight: 200;
-}
-
-i {
-  font-weight: 200;
-  font-style: italic;
-}
-
-b, strong {
-  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
 }
 
 a {
