--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -1,74 +1,67 @@
-
-
-.download-content {
-  .recommendation-section .recommendation-bg {
-    border: 1px solid red;
-  }
-
-  .box {
-    margin: 1em 0pt;
-    padding: 2px 2px 7pt 7pt;
-    font-size: 12px;
-    
-    .title {
-      font-size: 20px;
-      margin-top: 5pt;
-      margin-bottom: 8px;
-      margin-right: .5em;
+#content {
+  .download-content {
+    .recommendation-section .recommendation-bg {
+      border: 1px solid red;
     }
 
-    .buttons {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      align-items: center;
-      margin: 1em 0;
-
-
-      a:not(.img-badge) {
-        background: #111;
-        color: white;
-        font-weight: bold;
-        padding: 5px;
-        margin: 3px;
-        text-decoration: none;
-        font-size: 16px;
-        height: 48px;
-        box-sizing: border-box;
-        border: 2px solid #444;
-        border-radius: 5px;
-        line-height: 1.23;
-        min-width: 160px;
-      }
-
-      a.img-badge {
+    .box {
+      .buttons {
         display: flex;
-        align-content: center;
-        margin: 3px;
-        &>img{
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 1em 0;
+
+
+        a {
+          color: white;
+        }
+        
+        a:not(.img-badge) {
+          background: #111;
+          font-weight: 400;
+          padding: 5px;
+          margin: 3px;
+          text-decoration: none;
           height: 48px;
+          box-sizing: border-box;
+          border: 2px solid #444;
+          border-radius: 5px;
+          line-height: 1.23;
+          min-width: 160px;
+        }
+
+        a.img-badge {
+          display: flex;
+          align-content: center;
+          margin: 3px;
+          &>img{
+            height: 48px;
+          }
+        }
+
+        small {
+          display: block;
+          font-weight:normal;
+          font-size: 13px;
         }
       }
-
-      small {
-        display: block;
-        font-size: 12px;
-        font-weight:normal;
+      .descr {
       }
     }
-    .descr {
+    
+    code {
+      background: transparent;
     }
-  }
-  
-  code {
-    background: transparent;
   }
 }
 @media screen and (max-width: $grid-mobile-breakpoint) {
-  .download-content {
-    .box {
-      .buttons {
-        flex-direction: column;
+  #content {
+    .download-content {
+      .box {
+        .buttons {
+          flex-direction: column;
+        }
       }
     }
   }
